objects/SPM_Account_Programs__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <inlineHelpText>Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Programs_Covered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additional Capable Program</description>
        <inlineHelpText>Additional Capable Program</inlineHelpText>
        <label>Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grow</description>
        <inlineHelpText>Grow</inlineHelpText>
        <label>Grow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maintain</description>
        <inlineHelpText>Maintain</inlineHelpText>
        <label>Maintain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ServiceProgram</description>
        <inlineHelpText>ServiceProgram</inlineHelpText>
        <label>Service Program Name</label>
        <referenceTo>HS_ServiceProgram__c</referenceTo>
        <relationshipName>Programs_Covered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shrink_Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Program for Shrink/Remove</description>
        <inlineHelpText>Program for Shrink/Remove</inlineHelpText>
        <label>Shrink / Remove</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Service_Program_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Grow__c</columns>
        <columns>Maintain__c</columns>
        <columns>Shrink_Remove__c</columns>
        <columns>Add__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>